Fixed the stupid horizontal scroll thing

--- a/styles/yourlists.module.css
+++ b/styles/yourlists.module.css
@@ -17,8 +17,3 @@
 .center-cell > * {
   @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
 }
-
-.God > * {
-  /* there was a horizontal scrollbar and I had no idea why so i just made sure nothing could be too wide fuck this fucking bullshit */
-  @apply max-w-full;
-}
